# RAG_Studienberater_fhdw

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test.md
app/config/: __init__.py  logging_config.py  settings.py
app/pipelines/generation/application/: answer_orchestrator.py
app/pipelines/ingestion/application/: ingestion_orchestrator.py  ingestion_service.py
app/pipelines/retrieval/application/: retrieval_orchestrator.py
app/shared/domain/models/: __init__.py  answer.py  chunk.py  document.py  page.py  query.py  retrieval_result.py  scored_chunk.py
app/shared/domain/ports/: __init__.py  document_loader.py  embedding_port.py  (+2 more)
data/abgabe/Expose/: Expose.docx
data/evaluation/: results_2026-04-05_15-49-38.json  testset.json
data/evaluation/top_k_10/: sweep_large.json  sweep_medium.json  sweep_small.json
data/evaluation/top_k_5/: sweep_large.json  sweep_medium.json  sweep_small.json
data/raw/web/: url.json
scripts/: evaluate.py  ingest.py  parameter_sweep.py  smoke_test.py  smoke_text.py  test_retrieval.py
src/rag_studienberater/bootstrap/: __init__.py  container.py
src/rag_studienberater/config/: logging_config.py  settings.py
src/rag_studienberater/infrastructure/: __init__.py
src/rag_studienberater/presentation/: app.py  state.py  ui.py
tests/: conftest.py
tests/unit/services/: test_chunking_service.py  test_grounding_service.py  test_guardrail_service.py  test_retrieval_service.py  test_text_cleaner_service.py
tests/unit/use_cases/: test_answer_use_case.py  test_ingest_use_case.py  test_retrieval_use_case.py
(+49 files in other folders)
